--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Telegram
+TELEGRAM_ENABLE=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_CHAT_ID=
+
