.env.example update

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,11 @@ TELEGRAM_ENABLE=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_CHAT_ID=
 
+TEST=
+
+
+# Telegram
+TELEGRAM_ENABLE=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_CHAT_ID=
+
